letters now appear inside squares

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div id="wordle-container">
-        <div id="word-display"></div>
+        <div id="word-grid"></div>
+        <div id="feedback">Incorrect guesses: 0</div>
         <input type="text" id="guess-input" maxlength="5">
         <button onclick="checkGuess()">Submit Guess</button>
-        <div id="feedback"></div>
     </div>
     <script src="script.js"></script>
 </body>
