--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="wordle-container">
         <div id="word-grid"></div>
-        <div id="feedback">Incorrect guesses: 0</div>
+        <div id="feedback"></div>
         <input type="text" id="guess-input" maxlength="5" onkeypress="handleKeyPress(event)">
         <button onclick="checkGuess()">Submit Guess</button>
     </div>
